# axelar-amplifier

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  PR_SUMMARY.md  README.md  STACKS_REVIEW.md  SUMMARY.md  apply_fix.sh  block.txt  build.md  clippy.toml  codecov.yml  compose.yaml  config.yaml  config2.toml  create_pr_instructions.md  decoded_txs.txt  decoded_txs_pretty.json  e2e.sh  entrypoint.sh  fix-remove-remote-minter-deployment.patch  foo  gas.txt  gas2.txt  justfile  release.toml  rust-toolchain.toml  state.txt  txs.txt  warnings.txt
ampd/: .gitignore  Cargo.toml  Dockerfile  README.md  ampd-release.md  audit_config.toml  build.rs  docker-compose.yaml  prometheus.yml
ampd-handlers/: Cargo.toml  Dockerfile  evm-handler-config.toml
ampd-handlers/src/: lib.rs  main.rs  test_utils.rs  tracing.rs  voting.rs
ampd-handlers/src/evm/: finalizer.rs  json_rpc.rs  mod.rs  types.rs  verifier.rs
ampd-handlers/src/multisig/: error.rs  handler.rs  mod.rs
ampd-handlers/src/solana/: mod.rs  msg_verifier.rs  types.rs  verifier_set_verifier.rs
ampd-handlers/src/stellar/: mod.rs  rpc_client.rs  types.rs  verifier.rs
ampd-handlers/src/sui/: json_rpc.rs  mod.rs  types.rs  verifier.rs
ampd-handlers/src/xrpl/: json_rpc.rs  mod.rs  verifier.rs
ampd/data/01JW9EX6SVCKDN7YH9ADDGBQT7/: index  meta.json
ampd/data/wal/: 00000000
ampd/internal-proto/tofnd/: common.proto  multisig.proto
ampd/proto/: ampd.proto
ampd/proto/flow/: access.proto
ampd/proto/handlers/: chain.rs  config.rs  end_block.rs  evm_verify_msg.rs  evm_verify_worker_set.rs  multisig.rs
ampd/proto/tofnd/: common.proto  multisig.proto
ampd/src/: block_height_monitor.rs  broadcaster.rs  cli.rs  config.rs  cosmos.rs  error.rs  event_processor.rs  event_sub.rs  foo.rs  health_check.rs  json_rpc.rs  lib.rs  main.rs  prometheus.yaml  report.rs  state.rs  tm_address.rs  tm_client.rs  types.rs  url.rs
ampd/src/aleo/: error.rs  generated_structs.rs  http_client.rs  mod.rs  receipt_builder.rs  utils.rs  verifier.rs
ampd/src/asyncutil/: future.rs  task.rs
ampd/src/broadcast/: broadcaster.rs  config.rs  confirmer.rs  dec_coin.rs  mod.rs  msg_queue.rs  proto.rs  tx.rs
ampd/src/broadcaster/: accounts.rs  broadcaster.rs  chain_queries.rs  clients.rs  confirm_tx.rs  cosmos.rs  dec_coin.rs  fee.rs  key.rs  mod.rs  msg_queue.rs  proto.rs  queries.rs  tx.rs  tx_confirmer.rs
ampd/src/broadcaster_v2/: account.rs  broadcaster.rs  config.rs  confirmer.rs  dec_coin.rs  mod.rs  msg_queue.rs  proto.rs  tx.rs
ampd/src/commands/: bond_verifier.rs  bond_worker.rs  claim_stake.rs  daemon.rs  declare_chain_support.rs  deregister_chain_support.rs  mod.rs  register_chain_support.rs  register_public_key.rs  send_tokens.rs  set_rewards_proxy.rs  unbond_verifier.rs  verifier_address.rs  worker_address.rs
ampd/src/event_processor/: consume.rs  mod.rs
ampd/src/event_sub/: event_filter.rs  event_stream.rs  mod.rs  stream.rs
ampd/src/evm/: error.rs  finalizer.rs  json_rpc.rs  message_verifier.rs  mod.rs  verifier.rs
ampd/src/flow/: grpc.rs  mod.rs  verifier.rs
ampd/src/grpc/: ampd.rs  blockchain_service.rs  broadcast_service.rs  client.rs  config.rs  crypto.rs  crypto_service.rs  error.rs  (+4 more)
ampd/tests/: report.rs
contracts/abi-translation-contract/: Cargo.toml  schema.rs
contracts/aleo-signature-verifier/: Cargo.toml
contracts/axelar-gateway/: Cargo.toml
contracts/axelarnet-gateway/: Cargo.toml
contracts/batching/: Cargo.toml
contracts/chain-codec/: Cargo.toml
contracts/chain-codec-evm/: Cargo.toml
contracts/chain-codec-solana/: Cargo.toml
contracts/chain-codec-stellar/: Cargo.toml
contracts/chain-codec-sui/: Cargo.toml
contracts/command-batcher/: Cargo.toml  README.md
contracts/connection-router/: Cargo.toml  build.rs
contracts/coordinator/: CHANGELOG.md  Cargo.toml
contracts/event-verifier/: Cargo.toml  EVENT_DATA_SCHEMA.md  event_data_schema.json  package-lock.json  package.json  verify_events.js
contracts/gateway/: Cargo.toml
contracts/interchain-token-service/: CHANGELOG.md  Cargo.toml  README.md
contracts/its-abi-translation/: Cargo.toml  schema.rs
contracts/its-abi-translator/: CHANGELOG.md  Cargo.toml
contracts/its-aleo-translator/: Cargo.toml  README.md
contracts/its-borsh-translator/: CHANGELOG.md  Cargo.toml
contracts/multisig/: CHANGELOG.md  Cargo.toml  README.md
contracts/multisig-prover/: Cargo.toml  README.md
contracts/nexus-gateway/: Cargo.toml
contracts/outbound-evm-gateway/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests-copy/: Cargo.toml
integration-tests-copy/src/: contract.rs  coordinator_contract.rs  multisig_prover_contract.rs  rewards_contract.rs  service_registry_contract.rs  voting_verifier_contract.rs
integration-tests-copy/tests/: chain_freeze_unfreeze.rs  coordinator_one_click_deployment.rs  message_routing.rs  only_prover_updates_verifiers.rs
integration-tests/src/: address_generator.rs  axelarnet_gateway_contract.rs  chain_codec_contract.rs  connection_router_contract.rs  contract.rs  coordinator_contract.rs  failing_sig_verifier.rs  gateway_contract.rs  interchain_token_service_contract.rs  lib.rs  monitoring_contract.rs  multisig_contract.rs  multisig_prover_contract.rs  protocol.rs  rewards_contract.rs  router_contract.rs  service_registry_contract.rs  solana_multisig_prover_contract.rs  test.rs  test_utils.rs  voting_verifier_contract.rs  xrpl_gateway_contract.rs  xrpl_multisig_prover_contract.rs  xrpl_voting_verifier_contract.rs
integration-tests/tests/: bond_unbond.rs  chain_contracts_details.rs  chain_freeze_unfreeze.rs  coordinator_one_click_deployment.rs  message_routing.rs  only_prover_updates_verifiers.rs  sig_verifier_works.rs  unbond_worker.rs  update_worker_set.rs  verifier_details.rs
interchain-token-service/: Cargo.toml  README.md
interchain-token-service/src/: abi.rs  contract.rs  error.rs  events.rs  lib.rs  msg.rs  primitives.rs  state.rs
interchain-token-service/tests/: execute.rs  instantiate.rs  query.rs
(+1078 files in other folders)
