[workspace]
members = [
    "ampd",
    "ampd-handlers",
    "contracts/*",
    "external-gateways/*",
    "integration-tests",
    "packages/*",
    "tools/*",
]
resolver = "2"

[workspace.package]
rust-version = "1.86.0" # be sure there is an optimizer release supporting this version before updating. See https://github.com/CosmWasm/optimizer
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.metadata.dylint]

[[workspace.metadata.dylint.libraries]]
git = "https://github.com/axelarnetwork/axelar-lints"
pattern = "amplifier-lints"
rev = "ee5e8764895207da8a28cf5c41c4e326948ad620"

[workspace.dependencies]
alloy-primitives = { version = "0.7.6", default-features = false, features = [
  "std",
] }
alloy-sol-types = { version = "0.7.6", default-features = false, features = [
  "std",
] }
ampd-proto = { version = "^0.1.0", path = "packages/ampd-proto" }
ampd-sdk = { version = "^0.1.0", path = "packages/ampd-sdk" }
anyhow = "1.0.89"
assert_ok = "1.0"
async-trait = "0.1.59"
axelar-core-std = { version = "^1.0.0", path = "packages/axelar-core-std" }
axelar-solana-encoding = { git = "https://github.com/axelarnetwork/axelar-amplifier-solana.git", branch = "gateway-event-cpi" }
axelar-solana-gateway = { git = "https://github.com/axelarnetwork/axelar-amplifier-solana.git", branch = "gateway-event-cpi" }
axelar-wasm-std = { version = "^1.0.0", path = "packages/axelar-wasm-std" }
axelar-wasm-std-derive = { version = "^1.0.0", path = "packages/axelar-wasm-std-derive" }
axelarnet-gateway = { version = "^1.0.0", path = "contracts/axelarnet-gateway" }
base64 = "0.21.2"
bcs = "0.1.5"
bech32 = "0.11.0"
borsh = { version = "1.6", features = ["derive"] }
bs58 = "0.5.1"
chain-codec-api = { version = "^0.1.0", path = "packages/chain-codec-api" }
chain-codec-evm = { version = "^0.1.0", path = "contracts/chain-codec-evm" }
chain-codec-solana = { version = "^0.1.0", path = "contracts/chain-codec-solana" }
clap = { version = "4.2.7", features = ["derive", "cargo"] }
client = { version = "^1.0.0", path = "packages/client" }
config = "0.15.11"
const-str = "0.6.2"
coordinator = { version = "^2.1.3", path = "contracts/coordinator" }
cosmrs = "0.22.0"
cosmwasm-crypto = "2.1.4"
cosmwasm-schema = "2.1.4"
cosmwasm-std = "2.1.4"
cw-multi-test = "2.2.0"
cw-storage-plus = { version = "2.0.0", features = ["iterator", "macro"] }
cw-utils = "2.0.0"
cw2 = "2.0.0"
ed25519-dalek = { version = "2.1.1", default-features = false }
error-stack = { version = "0.4.0", features = ["eyre", "spantrace"] }
ethers-contract = { version = "2.0.14", default-features = false, features = [
  "abigen",
] }
ethers-core = "2.0.14"
event-verifier = { version = "^0.1.0", path = "contracts/event-verifier" }
event-verifier-api = { version = "^1.0.0", path = "packages/event-verifier-api" }
events = { version = "^1.0.0", path = "packages/events" }
events-derive = { version = "^1.0.0", path = "packages/events-derive" }
evm-gateway = { version = "^1.0.0", path = "packages/evm-gateway" }
futures = "0.3.25"
gateway = { version = "^1.1.1", path = "contracts/gateway" }
gateway-api = { version = "^1.0.0", path = "packages/gateway-api" }
gateway-event-stack = { git = "https://github.com/axelarnetwork/axelar-amplifier-solana.git", branch = "gateway-event-cpi" }
goldie = { version = "0.5" }
heck = "0.5.0"
hex = "0.4.3"
humantime-serde = "1.1.1"
integration-tests = { version = "^1.0.0", path = "integration-tests" }
interchain-token-service = { version = "^1.3.0", path = "contracts/interchain-token-service" }
interchain-token-service-std = { version = "^1.0.0", path = "packages/interchain-token-service-std" }
into-inner-derive = { version = "^1.0.0", path = "packages/into-inner-derive" }
itertools = "0.14.0"
its-abi-translator = { version = "^2.0.0", path = "contracts/its-abi-translator" }
its-msg-translator-api = { version = "^1.0.0", path = "packages/its-msg-translator-api" }
its-solana-translator = { version = "^1.0.0", path = "contracts/its-solana-translator" }
k256 = { version = "0.13.1", features = ["ecdsa"] }
mockall = "0.12.1"
msgs-derive = { version = "^1.0.0", path = "packages/msgs-derive" }
multisig = { version = "^2.4.0", path = "contracts/multisig" }
multisig-prover = { version = "^1.1.1", path = "contracts/multisig-prover" }
multisig-prover-api = { version = "1.0.0", path = "packages/multisig-prover-api" }
num-traits = { version = "0.2.14", default-features = false }
proc-macro2 = "1.0.92"
quote = "1.0.38"
rand = "0.8.5"
report = { version = "^1.0.0", path = "packages/report" }
rewards = { version = "^1.2.0", path = "contracts/rewards" }
router = { version = "^1.4.0", path = "contracts/router" }
router-api = { version = "^1.0.0", path = "packages/router-api" }
schemars = "0.8.10"
semver = "1.0"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = "1.0.134"
serde_with = "3.2.0"
service-registry = { version = "^1.2.1", path = "contracts/service-registry" }
service-registry-api = { version = "^1.0.0", path = "packages/service-registry-api" }
sha3 = { version = "0.10.8", default-features = false, features = [] }
signature-verifier-api = { version = "^1.0.0", path = "packages/signature-verifier-api" }
starknet-checked-felt = { version = "^1.0.0", path = "packages/starknet-checked-felt" }
starknet-core = "0.12.0"
starknet-providers = "0.12.0"
starknet-types-core = { version = "0.1.7" }
stellar = { version = "^1.0.0", path = "external-gateways/stellar" }
stellar-rpc-client = { version = "23.0.0-rc.5" }
stellar-strkey = { version = "0.0.10" }
stellar-xdr = { version = "23.0.0-rc.3" }
strum = { version = "0.25", default-features = false, features = ["derive"] }
sui-gateway = { version = "^1.0.0", path = "packages/sui-gateway" }
sui-types = { version = "^1.0.0", path = "packages/sui-types" }
syn = "2.0.92"
temp-env = "0.3.6"
tendermint = "0.40.4"
thiserror = "1.0.61"
tofn = { version = "1.1" }
tokio = "1.44.2"
tokio-stream = "0.1.11"
tokio-util = "0.7.11"
tracing = { version = "0.1.37", features = ["valuable", "log"] }
tracing-core = { version = "0.1.30", features = ["valuable"] }
tracing-error = { version = "0.2.1", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.20", features = [
  "json",
  "valuable",
  "env-filter",
] }
tracing-test = "0.2.5"
typed-builder = "0.18.2"
valuable = "0.1.1"
voting-verifier = { version = "^2.0.0", path = "contracts/voting-verifier" }
voting-verifier-api = { version = "1.0.0", path = "packages/voting-verifier-api" }
xrpl-types = { version = "^1.0.0", path = "packages/xrpl-types" }
xrpl_http_client = { version = "0.15.0" }

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_possible_truncation = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
