[package]
name = "ampd"
edition = { workspace = true }
version = "1.4.0"
rust-version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
axelar-solana-encoding = { workspace = true }
axelar-solana-gateway = { workspace = true }
axelar-wasm-std = { workspace = true }
axum = "0.7.5"
base64 = "0.21.2"
bcs = { workspace = true }
clap = { version = "4.2.7", features = ["derive", "cargo"] }
config = "0.13.2"
cosmrs = { version = "0.14.0", features = ["cosmwasm", "grpc"] }
cosmwasm-std = { workspace = true, features = ["stargate"] }
der = { version = "0.7.9", features = ["derive"] }
deref-derive = "0.1.0"
dirs = "5.0.1"
ed25519-dalek = { workspace = true }
enum-display-derive = "0.1.1"
error-stack = { workspace = true }
ethers-contract = { workspace = true }
ethers-core = { workspace = true }
ethers-providers = { version = "2.0.13", default-features = false, features = [
  "rustls",
] }
events = { workspace = true }
events-derive = { workspace = true }
evm-gateway = { workspace = true }
futures = "0.3.25"
hex = { version = "0.4.3", features = ["serde"] }
humantime-serde = "1.1.1"
itertools = { workspace = true }
k256 = { workspace = true }
mockall = "0.11.3"
move-core-types = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.39.1" }
multisig = { workspace = true, features = ["library"] }
multiversx-sdk = "0.6.1"
num-traits = { workspace = true }
openssl = { version = "0.10.35", features = [
  "vendored",
] } # Needed to make arm compilation work by forcing vendoring
prost = "0.11.9"
prost-types = "0.11.9"
report = { workspace = true }
reqwest = { version = "0.11.24", default-features = false }
rewards = { workspace = true }
router-api = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { workspace = true }
serde_with = "3.2.0"
solana-client = "=2.0.16"
solana-sdk = "=2.0.16"
solana-transaction-status = "=2.0.16"
gateway-event-stack = { workspace = true }
service-registry-api = { workspace = true }
sha3 = { workspace = true }
starknet-checked-felt = { workspace = true }

starknet-core = { workspace = true }
starknet-providers = { workspace = true }
stellar = { workspace = true }
stellar-rpc-client = "21.4.0"
stellar-xdr = { workspace = true, features = ["serde_json"] }
sui-gateway = { workspace = true }
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.39.1" }
sui-types = { git = "https://github.com/mystenlabs/sui", tag = "testnet-v1.39.1" }
tendermint = "0.35.0"
tendermint-rpc = { version = "0.35.0", features = ["http-client"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
toml = "0.5.9"
tonic = "0.9.2"
tracing = { version = "0.1.37", features = ["valuable", "log"] }
tracing-core = { version = "0.1.30", features = ["valuable"] }
tracing-subscriber = { version = "0.3.16", features = [
  "json",
  "valuable",
  "env-filter",
] }
typed-builder = "0.18.2"
url = "2.3.1"
valuable = { version = "0.1.0", features = ["derive"] }
valuable-serde = { version = "0.1.0", features = ["std"] }
voting-verifier = { workspace = true }

[dev-dependencies]
assert_ok = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
elliptic-curve = "0.13.5"
faux = "0.1.10"
generic-array = "0.14.7"
goldie = { workspace = true }
multisig = { workspace = true, features = ["test", "library"] }
rand = { workspace = true }
random-string = "1.0.0"
tokio = { workspace = true, features = ["test-util"] }
axelar-solana-encoding = { workspace = true }
test-log = { version = "0.2", features = ["trace"], default-features = false }

[build-dependencies]
tonic-build = "0.8.3"

[lints]
workspace = true
